feat: exclusion nominative
